Updated font and fixed spacing for arrow icon

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico'); //Variables
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
 $main-font: 'Pacifico', LtBrown, serif;
+$desc-font: 'Ubuntu', LtBrown, serif;
 
 body {
   margin: 0;
@@ -49,6 +51,7 @@ body {
   .about-text {
     margin-left: 50px;
     font-size: 20px;
+    font-family: $desc-font;
 
     p {
       text-align: left;
@@ -80,9 +83,17 @@ body {
     margin-bottom: 20px;
   }
 
+    .project-description {
+      font-family: $desc-font;
+  }
+
   .img {
     width: 100%;
   }
+}
+
+.iframe{
+  margin-right: 50%;
 }
 
 .portfolio-image {
@@ -178,7 +189,7 @@ body {
 
   .scrollTop {
     float: right;
-    margin-top: 20px;
+    // margin-top: 20px;
 
     &:hover {
       color: #337ab7;
